; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/catalog/extr_aclchk.c_ExecGrantStmt_oids.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/catalog/extr_aclchk.c_ExecGrantStmt_oids.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_14__ = type { i32 }

@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"unrecognized GrantStmt.objtype: %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_14__*)* @ExecGrantStmt_oids to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ExecGrantStmt_oids(%struct.TYPE_14__* %0) #0 {
  %2 = alloca %struct.TYPE_14__*, align 8
  store %struct.TYPE_14__* %0, %struct.TYPE_14__** %2, align 8
  %3 = load %struct.TYPE_14__*, %struct.TYPE_14__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %36 [
    i32 130, label %6
    i32 131, label %6
    i32 141, label %9
    i32 140, label %12
    i32 128, label %12
    i32 139, label %15
    i32 138, label %18
    i32 137, label %21
    i32 134, label %21
    i32 133, label %21
    i32 136, label %24
    i32 135, label %27
    i32 132, label %30
    i32 129, label %33
  ]

6:                                                ; preds = %1, %1
  %7 = load %struct.TYPE_14__*, %struct.TYPE_14__** %2, align 8
  %8 = call i32 @ExecGrant_Relation(%struct.TYPE_14__* %7)
  br label %42

9:                                                ; preds = %1
  %10 = load %struct.TYPE_14__*, %struct.TYPE_14__** %2, align 8
  %11 = call i32 @ExecGrant_Database(%struct.TYPE_14__* %10)
  br label %42

12:                                               ; preds = %1, %1
  %13 = load %struct.TYPE_14__*, %struct.TYPE_14__** %2, align 8
  %14 = call i32 @ExecGrant_Type(%struct.TYPE_14__* %13)
  br label %42

15:                                               ; preds = %1
  %16 = load %struct.TYPE_14__*, %struct.TYPE_14__** %2, align 8
  %17 = call i32 @ExecGrant_Fdw(%struct.TYPE_14__* %16)
  br label %42

18:                                               ; preds = %1
  %19 = load %struct.TYPE_14__*, %struct.TYPE_14__** %2, align 8
  %20 = call i32 @ExecGrant_ForeignServer(%struct.TYPE_14__* %19)
  br label %42

21:                                               ; preds = %1, %1, %1
  %22 = load %struct.TYPE_14__*, %struct.TYPE_14__** %2, align 8
  %23 = call i32 @ExecGrant_Function(%struct.TYPE_14__* %22)
  br label %42

24:                                               ; preds = %1
  %25 = load %struct.TYPE_14__*, %struct.TYPE_14__** %2, align 8
  %26 = call i32 @ExecGrant_Language(%struct.TYPE_14__* %25)
  br label %42

27:                                               ; preds = %1
  %28 = load %struct.TYPE_14__*, %struct.TYPE_14__** %2, align 8
  %29 = call i32 @ExecGrant_Largeobject(%struct.TYPE_14__* %28)
  br label %42

30:                                               ; preds = %1
  %31 = load %struct.TYPE_14__*, %struct.TYPE_14__** %2, align 8
  %32 = call i32 @ExecGrant_Namespace(%struct.TYPE_14__* %31)
  br label %42

33:                                               ; preds = %1
  %34 = load %struct.TYPE_14__*, %struct.TYPE_14__** %2, align 8
  %35 = call i32 @ExecGrant_Tablespace(%struct.TYPE_14__* %34)
  br label %42

36:                                               ; preds = %1
  %37 = load i32, i32* @ERROR, align 4
  %38 = load %struct.TYPE_14__*, %struct.TYPE_14__** %2, align 8
  %39 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = call i32 @elog(i32 %37, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %40)
  br label %42

42:                                               ; preds = %36, %33, %30, %27, %24, %21, %18, %15, %12, %9, %6
  %43 = load %struct.TYPE_14__*, %struct.TYPE_14__** %2, align 8
  %44 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = call i64 @EventTriggerSupportsObjectType(i32 %45)
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %48, label %51

48:                                               ; preds = %42
  %49 = load %struct.TYPE_14__*, %struct.TYPE_14__** %2, align 8
  %50 = call i32 @EventTriggerCollectGrant(%struct.TYPE_14__* %49)
  br label %51

51:                                               ; preds = %48, %42
  ret void
}

declare dso_local i32 @ExecGrant_Relation(%struct.TYPE_14__*) #1

declare dso_local i32 @ExecGrant_Database(%struct.TYPE_14__*) #1

declare dso_local i32 @ExecGrant_Type(%struct.TYPE_14__*) #1

declare dso_local i32 @ExecGrant_Fdw(%struct.TYPE_14__*) #1

declare dso_local i32 @ExecGrant_ForeignServer(%struct.TYPE_14__*) #1

declare dso_local i32 @ExecGrant_Function(%struct.TYPE_14__*) #1

declare dso_local i32 @ExecGrant_Language(%struct.TYPE_14__*) #1

declare dso_local i32 @ExecGrant_Largeobject(%struct.TYPE_14__*) #1

declare dso_local i32 @ExecGrant_Namespace(%struct.TYPE_14__*) #1

declare dso_local i32 @ExecGrant_Tablespace(%struct.TYPE_14__*) #1

declare dso_local i32 @elog(i32, i8*, i32) #1

declare dso_local i64 @EventTriggerSupportsObjectType(i32) #1

declare dso_local i32 @EventTriggerCollectGrant(%struct.TYPE_14__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
